--- a/pom.xml
+++ b/pom.xml
@@ -183,11 +183,15 @@
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
 
-		<dependency>
-    	    <groupId>org.glassfish.jersey.core</groupId>
-        	<artifactId>jersey-client</artifactId>
-            <version>3.1.1</version>
-		</dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jersey.inject</groupId>
+            <artifactId>jersey-hk2</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.github.sbrannen</groupId>
